--- a/package.json
+++ b/package.json
@@ -14,5 +14,15 @@
     "handlebars": "^4.0.5",
     "jquery": "^2.1.4",
     "path": "^0.11.14"
+  },
+  "devDependencies": {
+    "karma": "^0.13.15",
+    "karma-cli": "^0.1.1",
+    "karma-fixture": "^0.2.5",
+    "karma-html2js-preprocessor": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-qunit": "^0.1.8",
+    "phantomjs": "^1.9.18",
+    "qunitjs": "^1.20.0"
   }
 }
