--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-qunit": "^0.1.8",
+    "karma-sinon": "^1.0.4",
     "phantomjs": "^1.9.18",
-    "qunitjs": "^1.20.0"
+    "qunitjs": "^1.20.0",
+    "sinon": "^1.17.2"
   }
 }
